<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:paddingLeft="40dp"
    android:paddingTop="50dp"
    android:paddingRight="40dp"
    android:paddingBottom="50dp"
    android:layout_height="match_parent"
    android:id="@+id/event_dashboard_page"
    tools:context=".EventDashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="#FFFFFF"
                app:cornerRadius="16dp"
                app:icon="?attr/homeAsUpIndicator"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="24dp"
                app:iconTint="@color/black"
                app:rippleColor="#00FFFFFF"
                app:strokeColor="#000000"
                app:strokeWidth="2dp" />

            <Space
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/evdash_btn_map"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="#FFFFFF"
                app:cornerRadius="16dp"
                app:icon="@drawable/map_icon"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="24dp"
                app:iconTint="@color/black"
                app:rippleColor="#00FFFFFF"
                app:strokeColor="#000000"
                app:strokeWidth="2dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="239dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                app:cardBackgroundColor="#000000"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="false">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    app:cardBackgroundColor="@android:color/widget_edittext_dark"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="false">

                    <ImageView
                        android:contentDescription="Event Poster"
                        android:id="@+id/evdash_img_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_launcher_background" />
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/evdash_btn_qrcode"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="#FFFFFF"
                app:cornerRadius="16dp"
                app:icon="@drawable/qrcode"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="24dp"
                app:iconTint="@color/black"
                app:rippleColor="#00FFFFFF"
                app:strokeColor="#000000"
                app:strokeWidth="2dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/evdash_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Name"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="Event Statistic 1"
                    android:id="@+id/evdash_img_stat1"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/location_icon" />

                <TextView
                    android:id="@+id/evdash_txt_stat1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:text="Location"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/evdash_img_stat2"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:contentDescription="Event Statistic 2"
                    app:srcCompat="@drawable/calendar_icon" />

                <TextView
                    android:id="@+id/evdash_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:text="Start Date"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <Space
                    android:layout_width="40dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/evdash_img_stat5"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:contentDescription="Event Statistic 2"
                    app:srcCompat="@drawable/calendar_icon" />

                <TextView
                    android:id="@+id/evdash_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:text="End Date"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/evdash_img_stat3"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    app:srcCompat="@drawable/people_symbol"
                    android:background="@drawable/rect_rounded_button"
                    android:backgroundTint="@color/qr_active"/>

                <TextView
                    android:id="@+id/evdash_txt_stat3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="0"
                    android:paddingStart="12dp"
                    android:text="X"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/evdash_signedup_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:text="Signed Up"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/evdash_max_atd_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:text="(Max:"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/evdash_max_atd_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:text="X"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/evdash_max_atd_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:text=")"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal"
                android:padding="3dp">

                    <ImageView
                        android:id="@+id/evdash_img_stat4"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        app:srcCompat="@drawable/people_symbol"
                        android:background="@drawable/rect_rounded_button"
                        android:backgroundTint="@color/qr_active"/>

                <TextView
                    android:id="@+id/evdash_txt_stat4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="0"
                    android:paddingStart="12dp"
                    android:text="X"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/evdash_checkedin_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:text="Checked-In"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/evdash_btn_checkin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/qr_active"
                    android:text="Check-In"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>