...
    android:background="@color/white"
    android:paddingLeft="40dp"
    android:paddingTop="50dp"
    android:paddingRight="40dp"
    android:visibility="visible"
    android:paddingBottom="50dp"
    android:id="@+id/organizer_event_list"
    tools:context=".OrganizerEventList">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent">
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/org_ev_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:visibility="visible"
                tools:listitem="@layout/event_item" />

...
